# discostar

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-web.txt  requirements.txt
config/: settings.yaml
docs/: release_analysis_queries.md
src/cli/: main.py
src/core/analytics/: analytics_engine.py
src/core/database/: database.py  migrations.py  models.py  schema.sql  test_data_extractor.py  test_database.py
src/core/discogs/: api_client.py  collection_sync.py  data_ingestion.py  relationship_processor.py  release_filter.py  xml_downloader.py  xml_parser.py
src/core/utils/: config.py  duration.py  logging.py
tests/: README.md  conftest.py
tests/fixtures/: __init__.py  api_fixtures.py  database_fixtures.py  model_factories.py
tests/test_analytics/: __init__.py
tests/test_database/: test_database_manager.py  test_models.py
tests/test_discogs/: __init__.py  test_collection_sync_simple.py  test_release_filter.py  test_xml_parser.py
